[package]
name = "clahe"
version = "0.2.0"
edition = "2021"

description = "CLAHE (Contrast Limited Adaptive Histogram Equalisation)"
authors = ["Yuki SUZUKI <y-suzuki@radiol.med.osaka-u.ac.jp>"]
repository = "https://github.com/ykszk/clahe"
license = "MIT"

[[bin]]
name = "clahe"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0"
log = "0"
image = { version = "0.25", features = [
    "jpeg",
    "png",
], default-features = false }
ndarray = "0.16"
num-traits = "0.2"
ndarray-stats = "0.5"
coolor = "0.8"
thiserror = "1"

[dev-dependencies]
imageproc = "0"
pretty_assertions = "1.4"
ndarray-rand = "0.14"
criterion = { version = "0", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false
